# Books

./: README.md  pyproject.toml  requirements.txt
src/books/: __init__.py  books.db  dashboard.py  expo.db  expo.db.wal  films.db  films.db.wal
